--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
   <body>
     <div class="Calculator-container">
       <h1>Calculator</h1>
-      <div class="result">result place</div>
+      <div class="result"></div>
+      <div class = "button">clear</div>
       <div class="button-container">
         <div class="button" data-number = "7">7</div>
         <div class="button" data-number = "8">8</div>
@@ -26,11 +27,11 @@
         <div class="button" data-operator = "-">-</div>
         <div class="button" data-number = "0">0</div>
         <div class="button" data-number = ".">.</div>
-        <div class="button" data-equal = "=">=</div>
+        <div class="button" data-operator = "=">=</div>
         <div class="button" data-operator = "+">+</div>
       </div>
     </div>
-    <script src="js.js"></script>
     <div class="footer">Copyright c The Odin Project 2021</div>
+    <script src="js.js"></script>
   </body>
 </html>
