fix calculating algorithm based on specifications of Odin project

--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
   <body>
     <div class="Calculator-container">
       <h1>Calculator</h1>
-      <div class="result"></div>
+      <div class="result-container">
+        <div class = "past-result"></div>
+        <div class ="result"></div>
+      </div>
       <div class = "button">clear</div>
       <div class="button-container">
         <div class="button" data-number = "7">7</div>
@@ -27,11 +30,11 @@
         <div class="button" data-operator = "-">-</div>
         <div class="button" data-number = "0">0</div>
         <div class="button" data-number = ".">.</div>
-        <div class="button" data-operator = "=">=</div>
+        <div class="button" data-equal = "=">=</div>
         <div class="button" data-operator = "+">+</div>
       </div>
     </div>
-    <div class="footer">Copyright c The Odin Project 2021</div>
+    <div class="footer">Copyright c The Odin Project 2022</div>
     <script src="js.js"></script>
   </body>
 </html>
