fixed logic and made modulus button work

--- a/index.html
+++ b/index.html
@@ -14,8 +14,11 @@
         <div class = "past-result"></div>
         <div class ="result"></div>
       </div>
-      <div class = "button">clear</div>
       <div class="button-container">
+        <div class = "button" id="clear">clear</div>
+        <div class = "button" id="">+/-</div>
+        <div class = "button" data-operator = "%">%</div>
+        <div class = "button">x^y</div>
         <div class="button" data-number = "7">7</div>
         <div class="button" data-number = "8">8</div>
         <div class="button" data-number = "9">9</div>
