--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class = "button" id="clear">clear</div>
         <div class = "button" id="">+/-</div>
         <div class = "button" data-operator = "%">%</div>
-        <div class = "button">x^y</div>
+        <div class = "button" data-operator = "^">x^y</div>
         <div class="button" data-number = "7">7</div>
         <div class="button" data-number = "8">8</div>
         <div class="button" data-number = "9">9</div>
