--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
+    <h1>Calculator</h1>
     <div class="Calculator-container">
-      <h1>Calculator</h1>
       <div class="result-container">
         <div class = "past-result"></div>
         <div class ="result"></div>
       </div>
       <div class="button-container">
         <div class = "button" id="clear">clear</div>
-        <div class = "button" id="">+/-</div>
+        <div class = "button" id="changeSign">+/-</div>
         <div class = "button" data-operator = "%">%</div>
-        <div class = "button" data-operator = "^">x^y</div>
+        <div class = "button" data-operator = "^"><span>x<sup>y</sup></span></div>
         <div class="button" data-number = "7">7</div>
         <div class="button" data-number = "8">8</div>
         <div class="button" data-number = "9">9</div>
