--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css">
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
@@ -37,7 +38,11 @@
         <div class="button" data-operator = "+">+</div>
       </div>
     </div>
-    <div class="footer">Copyright c The Odin Project 2022</div>
+    <div class="footer">Copyright © The Odin Project 2022
+      <a href ="https://github.com/spookyflame10" target ="_blank">
+        <i class="fab fa-github"></i>
+      </a>
+    </div>
     <script src="js.js"></script>
   </body>
 </html>
